# data-analyser

./: .gitignore  README.md  chat_main.py  crew.py  main.py  pyproject.toml  pytest.ini
.cursor/rules/: crewai.mdc
agents/: data_agent.py  visualizer_agent.py
dataset/: DD_EEC_ANNUEL_2024_data.csv
tasks/: data_tasks.py  visualization_tasks.py
tests/: conftest.py  test_chat.py
tests/agents/: test_agents_mocked.py
tests/tools/: test_column_analysis.py  test_dataset_summary.py  test_statistical_analysis.py  test_tools_fast.py  test_visualization.py
tools/: column_analysis.py  dataset_summary.py  statistical_analysis.py  utils.py  visualization.py
