[project]
name = "data-analyser"
version = "0.1.0"
description = ""
authors = [
    {name = "Antonin Anquetil",email = "antonin.anquetil@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "crewai (>=0.152.0,<0.153.0)",
    "crewai-tools (>=0.59.0,<0.60.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "matplotlib (>=3.8.0,<4.0.0)",
    "seaborn (>=0.13.0,<1.0.0)",
    "numpy (>=1.24.0,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-cov (>=5.0.0,<6.0.0)",
    "pytest-benchmark (>=4.0.0,<5.0.0)",
    "pytest-mock (>=3.12.0,<4.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
